# GenesisX

./: .env.example  .gitignore  ENVIRONMENT_GUIDE.md  LICENSE  PROJECT_STRUCTURE_TREE--English.md  PROJECT_STRUCTURE_TREE.md  README--English.md  README--中文.md  README.md  RUN_GUIDE.md  __init__.py  chat_interactive.py  chat_test.txt  compile_code_docs.py  daemon.py  launch_desktop.bat  migrate_session.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_tests.py  setup.py  test_tools.py
affect/: __init__.py  modulation.py  mood.py  rpe.py  stress_affect.py  value_function.py
axiology/: __init__.py  axiology_config.py  compensation.py  dynamic_setpoints.py  feature_extractors.py  gaps.py  parameters.py  personality.py  reward.py  setpoints.py  utilities_unified.py  value_dimensions.py  value_learning.py  weights.py
axiology/drives/: __init__.py  attachment.py  base.py  competence.py  curiosity.py  homeostasis.py  safety.py
axiology/examples/: __init__.py  compensation_example.py
benchmarks/: __init__.py  emotion_benchmark.py  gxbs_runner.py  memory_benchmark.py  multi_model_benchmark.py  personality_benchmark.py  run_gxbs.py
cognition/: __init__.py  goal_compiler.py  goal_progress.py  insight_quality.py  plan_evaluator.py  planner.py  verifier.py
common/: __init__.py  auth.py  config.py  config_manager.py  constants.py  database.py  error_handler.py  hashing.py  health_check.py  jsonl.py  logger.py  metrics.py  models.py  utils.py
config/: default_genome.yaml  llm_config.env.example  mind_field.yaml  multi_model.yaml  organ_llm.yaml  resources.yaml  runtime.yaml  tool_manifest.yaml  value_setpoints.yaml
core/: __init__.py  abstract_state.py  autonomous_scheduler.py  capability_gap_detector.py  capability_manager.py  capability_router.py  differentiate.py  emotion_decay.py  exceptions.py  exploration.py  invariants.py  life_loop.py  life_loop_backup.py  resource_config.py  scheduler.py  state.py  tick.py
core/evolution/: __init__.py  archive_manager.py  clone_manager.py  evaluation_manager.py  evolution_engine.py  models.py  mutation_manager.py  transfer_manager.py
core/growth/: __init__.py  growth_manager.py  limb_builder.py  limb_generator.py
core/handlers/: __init__.py  action_executor.py  caretaker_mode.py  chat_handler.py  gap_detector.py
core/plugins/: __init__.py  plugin_manager.py
core/plugins/templates/: __init__.py
core/stores/: __init__.py  factory.py  fields.py  ledger.py  signals.py  slots.py
eval/: __init__.py  gxbs.py
examples/: api_client.py  basic_usage.py  interactive_scenarios.py
lifecycle/: __init__.py  genesis_lifecycle.py  tick_loop.py
memory/: __init__.py  consolidation.py  dream.py  episodic.py  familiarity.py  gates.py  indices.py  organ_guide_manager.py  personality_encoding.py  pruning.py  retrieval.py  salience.py  schema.py  semantic_novelty.py  skill.py  smart_retrieval.py  utils.py
memory/limb_guides/: __init__.py  data_analysis_guide.py  file_ops_guide.py  pdf_processing_guide.py
memory/limb_guides/data/: organ_guides.json
memory/skills/: __init__.py  base.py  skill_registry.py  web_skill.py
metabolism/: __init__.py  boredom.py  circadian.py  recovery.py  resource_pressure.py
models/: __init__.py  session_models.py  user.py
organs/: __init__.py  base_organ.py  organ_interface.py  organ_llm_session.py  organ_manager.py  organ_selector.py  unified_organ.py
organs/internal/: __init__.py  archivist_organ.py  builder_organ.py  caretaker_organ.py  immune_organ.py  mind_organ.py  scout_organ.py
organs/limbs/: __init__.py
paper/: Genesis X：Axiology Engine for Digital Life_V14.txt  Genesis X：Axiology Engine for Digital Life_V14_Appendix.txt
perception/: __init__.py  command_parser.py  context_builder.py  novelty.py  observer.py  self_perception.py  signal_filter.py  time_perception.py
persistence/: __init__.py  event_log.py  replay.py  snapshot.py  storage.py  tool_call_log.py
safety/: __init__.py  budget_control.py  contract_guard.py  hallucination_check.py  integrity_check.py  risk_assessment.py  sandbox.py
tests/: __init__.py  conftest.py  test_affect_integration.py  test_associative_memory.py  test_axiology.py  test_chat_interaction.py  test_dynamic_setpoints.py  test_e2e.py  test_emotion_combinations.py  test_fixes.py  test_fixes_verification.py  test_goal_compiler.py  test_insight_quality.py  test_integration.py  test_life_loop_integration.py  test_lifecycle.py  test_llm_features.py  test_memory.py  test_organ_coordination.py  test_organs.py  test_p2_9_p1_8.py  test_semantic_novelty.py  test_tool_parser.py  test_utility_normalization.py  test_value_dimensions.py
tools/: __init__.py  blackboard.py  capability.py  code_exec.py  cost_model.py  dynamic_tool_registry.py  embeddings.py  file_ops.py  llm_api.py  llm_cache.py  llm_client.py  llm_orchestrator.py  memory_tools.py  messaging.py  safe_executor.py  tool_definitions.py  tool_executor.py  tool_protocol.py  tool_registry.py  tool_system_v2.py  vision.py  voice.py  web_search.py
web/: app.py  mood-website.html  websocket_server.py
web/static/css/: chat-styles.css  genesis-theme.css  navigation.css  style.css
web/static/js/: app.js  chat-app.js  navigation.js
web/templates/: chat.html  dashboard.html  debug.html  error.html  index.html  monitor.html  navigation_test.html  settings.html
