[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesisx"
version = "1.0.1"
description = "Genesis X: A Value-Driven Cognitive Architecture with Dynamic Organ Differentiation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Genesis X Project", email = "genesisx@example.com"}
]
keywords = [
    "cognitive-architecture",
    "artificial-general-intelligence",
    "value-alignment",
    "reinforcement-learning",
    "complementary-learning-systems"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Framework
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # FastAPI and Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.11.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.2.0",
    # Authentication & Security
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # API Integration
    "dashscope>=1.20.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    # Data Science & ML
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # Serialization
    "orjson>=3.9.0",
    # Logging & Monitoring
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    # Task Queue
    "celery>=5.3.0",
    "kombu>=5.3.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "cachetools>=5.3.0",
    "aiofiles>=23.2.0",
    # Type Checking
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    # System Monitoring
    "py-cpuinfo>=9.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.6.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "flake8>=7.1.0",
    "pylint>=3.3.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/genesisx/genesisx"
Documentation = "https://genesisx.readthedocs.io"
Repository = "https://github.com/genesisx/genesisx"
"Bug Tracker" = "https://github.com/genesisx/genesisx/issues"

[project.scripts]
genesisx = "run:main"

[tool.setuptools]
packages = [
    "affect",
    "axiology",
    "cognition",
    "common",
    "core",
    "eval",
    "interface",
    "lifecycle",
    "memory",
    "metabolism",
    "models",
    "organs",
    "perception",
    "persistence",
    "safety",
    "tools",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
  | __pycache__
  | artifacts
  | logs
)/
'''
# Skip string normalization for quotes (preserve existing style)
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["genesisx"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by black)
]
extend-exclude = [
    "artifacts",
    "logs",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
extend-include = ["*.py", "*.pyi"]

# Allow unused variables when prefixed with underscore
[tool.ruff.lint.pycodestyle]
ignore-overlong-running-comments = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"test_*.py" = ["ARG001"]  # Allow unused arguments in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "orjson.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.mypy.plugins]
# Add mypy plugins here if needed
